--- a/software/package.json
+++ b/software/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/r-portas/multimeter-software#readme",
   "dependencies": {
     "express": "^4.14.1",
+    "serialport": "^4.0.7",
     "socket.io": "^1.7.3"
   },
   "devDependencies": {
