--- a/firmware/.settings/org.eclipse.core.resources.prefs
+++ b/firmware/.settings/org.eclipse.core.resources.prefs
@@ -4,3 +4,9 @@ encoding//Debug/objects.mk=UTF-8
 encoding//Debug/sources.mk=UTF-8
 encoding//Debug/subdir_rules.mk=UTF-8
 encoding//Debug/subdir_vars.mk=UTF-8
+encoding//Debug/utils/fatfs/port/subdir_rules.mk=UTF-8
+encoding//Debug/utils/fatfs/port/subdir_vars.mk=UTF-8
+encoding//Debug/utils/fatfs/src/subdir_rules.mk=UTF-8
+encoding//Debug/utils/fatfs/src/subdir_vars.mk=UTF-8
+encoding//Debug/utils/subdir_rules.mk=UTF-8
+encoding//Debug/utils/subdir_vars.mk=UTF-8
